hdone/objects/Address__c.object
<CustomObject>
    <fields>
        <fullName>ResidentialDeliveryIndicator__c</fullName>
        <description>Residential Delivery Indicator (residential or commercial).

residential — The address is a residential address
commercial — The address is a commercial address
unknown — The RDI of the address is currently unknown</description>
        <inlineHelpText>Residential Delivery Indicator (residential or commercial).</inlineHelpText>
        <label>ResidentialDeliveryIndicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sf2Sf_PartnerConnection_Id__c</fullName>
        <description>Sf2Sf PartnerConnectionId Id from PartnerNetworkConnection</description>
        <externalId>true</externalId>
        <inlineHelpText>Sf2Sf PartnerConnectionId Id from PartnerNetworkConnection</inlineHelpText>
        <label>Sf2Sf_PartnerConnection_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareId__c</fullName>
        <description>Id from PartnerNetworkRecordConnection for shared record.</description>
        <inlineHelpText>Id from PartnerNetworkRecordConnection for shared record.</inlineHelpText>
        <label>Sf2Sf ShareId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareName__c</fullName>
        <description>Sharing name for Salesforce to Salesforce. Uses Custom setting to get name as PartnerNetworkConnection name cannot be changed and can be confusing</description>
        <inlineHelpText>Sharing name for Salesforce to Salesforce from Custom Setting</inlineHelpText>
        <label>Sf2Sf_ShareName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareStatus__c</fullName>
        <description>Populates shared status for Salesforce to Salesforce connection. Cannot read status from object only from PartnerNetworkConnection object</description>
        <inlineHelpText>Shared status for Salesforce to Salesforce connection. Not real time.</inlineHelpText>
        <label>Sf2Sf_ShareStatus</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if record should be shared with other organization. Used for Salesforce to Salesforce.</description>
        <inlineHelpText>Should record be shared?</inlineHelpText>
        <label>Share Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <description>Optional name of address location. Eg, St Josephs Hospital, YMCA, etc. Complete free form. Duplicates are allowed.</description>
        <inlineHelpText>Optional name of address location</inlineHelpText>
        <label>Site Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceOrg__c</fullName>
        <description>Identifies which is source org for record. If record is shared FROM customer to HealthDetail then Customer else if shared other way HealthDetail. Was using formula fields but getting relationship errors.</description>
        <inlineHelpText>Identifies which is source org for record Customer or HealthDetail</inlineHelpText>
        <label>SourceOrg</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>HealthDetail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State. United States only</description>
        <inlineHelpText>State value. US only.</inlineHelpText>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of Address</description>
        <inlineHelpText>Status of Address</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StreetAddressFormula__c</fullName>
        <description>Puts Street Address on 1 line</description>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(AddressLine1__c, &quot; &quot;, NULL),&quot;-&quot;,NULL),&quot;{}&quot;,NULL),&quot;,&quot;,NULL),&quot;#&quot;,&quot;STE&quot;) &amp; 
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(AddressLine2__c, &quot; &quot;, NULL),&quot;-&quot;,NULL),&quot;{}&quot;,NULL),&quot;,&quot;,NULL),&quot;#&quot;,&quot;STE&quot;) &amp; 
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(City__c, &quot; &quot;, NULL),&quot;-&quot;,NULL),&quot;{}&quot;,NULL),&quot;,&quot;,NULL),&quot;#&quot;,&quot;STE&quot;) &amp; 
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(TEXT(State__c),&quot; &quot;,NULL),&quot;-&quot;,NULL),&quot;{}&quot;,NULL),&quot;,&quot;,NULL),&quot;#&quot;,&quot;STE&quot;) &amp; 
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LEFT(ZipCode__c,5),&quot; &quot;,NULL),&quot;-&quot;,NULL),&quot;{}&quot;,NULL),&quot;,&quot;,NULL) 

/*Customer sends address all in 1 line. Using formula to match addresses existing in system already 
Matches formula used in Informatica address transformation. If formulas do not match will get duplicates*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Street Address</inlineHelpText>
        <label>StreetAddressFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_Full__c</fullName>
        <description>Combination of AddressLine1 and AddressLine 2. Needed for duplicate matching using Salesforce. Cannot use a formula field and because customers often use 2 lines for address keeping AddressLine1 and AddressLine2 separate. Using Formula field to update to ensure no errors</description>
        <inlineHelpText>Full street address for duplicate matching</inlineHelpText>
        <label>Street Address Full</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmitForCertification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag address to submit for address certification</description>
        <inlineHelpText>Flag address to submit for address certification</inlineHelpText>
        <label>SubmitForCertification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suitelink_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a match (or not) to the USPS SuiteLink data. SuiteLink attempts to provide secondary information such as &quot;suite&quot; or &quot;apartment&quot; whenever there is a match based on address and Firm Name (Company) input.

true — There was a SuiteLink match and the result is provided.
false — There was no SuiteLink match.</description>
        <inlineHelpText>Indicates a match (or not) to the USPS SuiteLink data.</inlineHelpText>
        <label>Suitelink Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timezone_US__c</fullName>
        <description>US Timezone</description>
        <inlineHelpText>US Timezone</inlineHelpText>
        <label>Timezone_US</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Atlantic</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Eastern</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Pacific</fullName>
                </value>
                <value>
                    <fullName>Samoa</fullName>
                </value>
                <value>
                    <fullName>UTC+9</fullName>
                </value>
                <value>
                    <fullName>UTC+10</fullName>
                </value>
                <value>
                    <fullName>UTC+11</fullName>
                </value>
                <value>
                    <fullName>UTC+12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UTC_Offset__c</fullName>
        <description>Indicates the number of hours the time zone is offset from Universal Time Co-ordinated (UTC), the international time standard, also known as Greenwich Meridian Time (GMT).</description>
        <inlineHelpText>Indicates the number of hours the time zone is offset from Universal Time Co-ordinated (UTC), the international time standard, also known as Greenwich Meridian Time (GMT).</inlineHelpText>
        <label>UTC Offset</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vacant__c</fullName>
        <description>Indicates that a delivery point was active in the past, but is currently vacant (in most cases, unoccupied over 90 days), and not receiving delivery.</description>
        <inlineHelpText>Indicates if address has been unoccupied over 90 days.</inlineHelpText>
        <label>Vacant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wheelchair_Accessible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if office is wheelchair accessible</description>
        <inlineHelpText>Is office wheelchair accessible?</inlineHelpText>
        <label>Wheelchair Accessible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZipAddOn__c</fullName>
        <description>Add on code for Zip</description>
        <inlineHelpText>Add on code for Zip</inlineHelpText>
        <label>ZipAddOn</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <description>5 digit zip code</description>
        <inlineHelpText>5 digit zip code</inlineHelpText>
        <label>ZipCode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Type__c</fullName>
        <description>Indicates the type of the ZIP Code for the address that was matched. Only given if a 5-digit match is made.

Unique — The ZIP Code consists of a single delivery point, pertaining to a United States Postal Service customer (like a large business or government agency) that routes all of its own mail internally.
Military — The ZIP Code pertains to military units and diplomatic organizations, often in foreign locations.
POBox — The ZIP Code is assigned to a collection of Post Office Boxes.
Standard — The ZIP Code does not pertain to any of the above categories.</description>
        <label>Zip Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <nameField>
        <displayFormat>addr-{00000000}</displayFormat>
        <label>Address Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <recordTypes>
        <fullName>Address_Confirmed</fullName>
        <active>true</active>
        <description>Used for CASS certified addresses</description>
        <label>Address Confirmed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Address_Region</fullName>
        <active>true</active>
        <description>Address based on region only. Used primarily for appointment only schedules</description>
        <label>Address Region</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Address</fullName>
        <active>true</active>
        <description>Unconfirmed or CASS certified addresses</description>
        <label>Standard Address</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Source_Customer</fullName>
        <active>false</active>
        <description>Ensures lookup is to Customer sourced records</description>
        <errorConditionFormula>AND(
NOT(ISPICKVAL( Address_rel__r.SourceOrg__c , &apos;Customer&apos;)),
NOT(ISBLANK( Address_rel__c ))
)</errorConditionFormula>
        <errorDisplayField>Address_rel__c</errorDisplayField>
        <errorMessage>Can only select related records with SourceOrg = Customer. Please check association.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ZipNumericOnly</fullName>
        <active>false</active>
        <description>Ensures zip codes are entered as all numeric with no dashes</description>
        <errorConditionFormula>NOT( REGEX( ZipCode__c , &quot;[0-9]{5}&quot;))</errorConditionFormula>
        <errorDisplayField>ZipCode__c</errorDisplayField>
        <errorMessage>Zip code should be all  numbers and 5 digits. Please reenter zip code.</errorMessage>
    </validationRules>
</CustomObject>